log/build_2024-11-30_15-32-41/cs1651_drone/stderr.log
  File "/home/chondosha/ros2_ws/install/cs1651_drone/lib/python3.12/site-packages/cs1651_drone/drone_takeoff_test.py", line 35
    while !armed:
          ^
SyntaxError: invalid syntax

